# LALG-compiler

./: .gitignore  CMakeLists.txt  README.md  lexical.lex  reserved_words.gpref  reserved_words_fallback.h  test2.pas  test4.pas
cmake/: FindGPERF.cmake
src/: lexical.lex  reserved_words.gpref  reserved_words_fallback.h  syntatic.y  words.txt
tests/: test.pas  test2.pas  test3.pas  test3error.pas
